<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hw Far?</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">My Location</string>
    <string name="action_snap">Snap Location</string>
    <string name="action_tips">Tips</string>
    <string name="action_about">About App</string>
    <string name="action_viewRecords">View Records</string>
    <string name="pref_units_label">Change Unit</string>

    <!-- Text in Tips Activity -->
    <string name="tips">        1. Ensure that GPS and Location services are switched  \n\t on.\n
        \n2. Hw Far will not work without internet connection.\n
        \n3. For straight line measurements, uneven movement \n\t from point 1 to point 2 does not affect measurement.\n
        \n4. Camera Feature works with both Front and Back \n\t Cameras.\n
        \n5. Map Location Feature will not work without proper \n\t setup of Google Maps or any similar Application.</string>
    <string name="aboutapp">        "App developed by Okemakinde Samson .K (University of Ibadan)\n as Final Certification Project for\nGoogle Udacity Android Development Training Program.\nDeveloped with: Android Studio 1.0.1 \nAll rights reserved. \nContact: +2348137442067, +2348174018754\n\t\tcsamsonok@gmail.com"</string>

    <!-- Label for metric option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_km">Kilometres</string>
    <string name="pref_units_label_cm">Centimetres</string>
    <!-- Label for imperial option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_m">Metres</string>
    <string name="pref_units_label_in">Inches</string>
    <string name="pref_units_label_miles">Miles</string>
    <string name="pref_units_label_yards">Yards</string>

    <!-- Key name for temperature unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_units_key" translatable="false">units</string>

    <!-- Value in SharedPreferences for various units of lenght [CHAR LIMIT=NONE] -->
    <string name="pref_units_km" translatable="false">km</string>
    <string name="pref_units_default" translatable="false">m</string>
    <string name="pref_units_m" translatable="false">m</string>
    <string name="pref_units_in" translatable="false">in</string>
    <string name="pref_units_miles" translatable="false">miles</string>
    <string name="pref_units_yards" translatable="false">yards</string>
    <string name="pref_units_cm" translatable="false">Centimetres</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_label" translatable="false">Current Location</string>

    <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
    <string name="pref_location_default" translatable="false">94043</string>
    <string name="title_activity_about">About App</string>
    <string name="title_activity_tips">Tips</string>
    <string name="title_activity_view">ViewActivity</string>
    <string name="title_activity_rec">RecActivity</string>

</resources>
