<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bwq="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_map"
        android:title="@string/action_map"
        app:showAsAction="always"/>

    <item android:id="@+id/action_snap"
        android:title="@string/action_snap"
        app:showAsAction="never"/>

    <item android:id="@+id/action_tips"
        android:title="@string/action_tips"
        app:showAsAction="never"/>

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never"/>

    <item android:id="@+id/action_viewRecords"
        android:title="@string/action_viewRecords"
        app:showAsAction="never"/>


    <!--   <item android:id="@+id/menu_share"

           android:title="Share Location"
           bwq:showAsAction = "always"
           bwq:actionProviderClass="android.support.v7.widget.ShareActionProvider"
           />-->



</menu>
<!--
    android:showAsAction="ifRoom"
        android:actionProviderClass="android.widget.ShareActionProvider"-->
